[gd_scene load_steps=27 format=3 uid="uid://bihdtxkvg1k76"]

[ext_resource type="Script" path="res://Mobs/dragon/dragon.gd" id="1_btiyw"]
[ext_resource type="Texture2D" uid="uid://dh3ogdrrqi5fl" path="res://Animated Sideview Battlers/Dragon Demios/Demios.png" id="2_53mc5"]
[ext_resource type="PackedScene" uid="uid://5s735bpok0ur" path="res://scn/DamageBox/damage_box.tscn" id="3_vmuff"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e6h6m"]
atlas = ExtResource("2_53mc5")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjeif"]
atlas = ExtResource("2_53mc5")
region = Rect2(1024, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdbdl"]
atlas = ExtResource("2_53mc5")
region = Rect2(2560, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqsci"]
atlas = ExtResource("2_53mc5")
region = Rect2(2048, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1h20"]
atlas = ExtResource("2_53mc5")
region = Rect2(1536, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_q81no"]
atlas = ExtResource("2_53mc5")
region = Rect2(1024, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yvrb"]
atlas = ExtResource("2_53mc5")
region = Rect2(1536, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qetv0"]
atlas = ExtResource("2_53mc5")
region = Rect2(2560, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_my12u"]
atlas = ExtResource("2_53mc5")
region = Rect2(3072, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg6ik"]
atlas = ExtResource("2_53mc5")
region = Rect2(3584, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_7iujc"]
atlas = ExtResource("2_53mc5")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8ej3"]
atlas = ExtResource("2_53mc5")
region = Rect2(3072, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_evg4s"]
atlas = ExtResource("2_53mc5")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_l1aeu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6h6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjeif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdbdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqsci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1h20")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q81no")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yvrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qetv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my12u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg6ik")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7iujc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8ej3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evg4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7iujc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8ej3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evg4s")
}],
"loop": false,
"name": &"Recover",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7iujc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8ej3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evg4s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_42iqk"]
height = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pup8h"]
radius = 231.311

[sub_resource type="RectangleShape2D" id="RectangleShape2D_51vds"]
size = Vector2(40, 3.22632)

[sub_resource type="Animation" id="Animation_1shrn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ta7pa"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_2v820"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}

[sub_resource type="Animation" id="Animation_7i2q4"]
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Recover"]
}

[sub_resource type="Animation" id="Animation_2dxhg"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["default"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_neeh5"]
_data = {
"Attack": SubResource("Animation_ta7pa"),
"Death": SubResource("Animation_2v820"),
"RESET": SubResource("Animation_1shrn"),
"Recover": SubResource("Animation_7i2q4"),
"default": SubResource("Animation_2dxhg")
}

[node name="dragon" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_btiyw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(8, -20)
scale = Vector2(0.147438, 0.15976)
sprite_frames = SubResource("SpriteFrames_l1aeu")
animation = &"Attack"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_42iqk")

[node name="Detector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_pup8h")

[node name="AttackDirection" type="Node2D" parent="."]

[node name="Attack" type="Area2D" parent="AttackDirection"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/Attack"]
position = Vector2(20, -6)
shape = SubResource("RectangleShape2D_51vds")

[node name="DamageBox" parent="AttackDirection" instance=ExtResource("3_vmuff")]

[node name="HurtBox" parent="AttackDirection/DamageBox" index="0"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HurtBox" index="0"]
position = Vector2(0, -11)

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HitBox" index="0"]
position = Vector2(10, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_neeh5")
}

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="AttackDirection/Attack" to="." method="_on_attack_body_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]

[editable path="AttackDirection/DamageBox"]
